📝 2장 이미지 url 수정

--- a/2장_리액트_핵심_요소_깊게_살펴보기.md
+++ b/2장_리액트_핵심_요소_깊게_살펴보기.md
@@ -383,7 +383,7 @@ function TextOrHeading({
 
 [DOM과 CSSOM으로 렌더링 트리가 만들어지는 과정]
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled.png)
+![2_Untitled 1](https://github.com/haaneul11/react-deep-dive/assets/58289675/9b6e1fbe-b378-4242-98b8-f39d6eaa4122)
 
 👇🏻 다음 예제 코드로 위 과정이 어떻게 일어나는지 확인해보자.
 
@@ -1035,7 +1035,7 @@ export default function CompareComponent() {
 
 3. 따라서 PureComponent는 필요한 곳에 적재적소에 활용하는 것이 애플리케이션 성능에 도움이 된다.
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%201.png)
+![2_Untitled 1](https://github.com/haaneul11/react-deep-dive/assets/58289675/769abd72-3902-47c9-8530-e5735c06c021)
 
 static getDerivedStateFromProps()
 
@@ -1099,7 +1099,7 @@ componentDidUpdate(provProps: Props, prevState: State, snapshot: Snapshot) {
 
 - https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%202.png)
+![2_Untitled 2](https://github.com/haaneul11/react-deep-dive/assets/58289675/ad0b2e80-5487-4358-a9af-38b647fd3aba)
 
 getDerivedStateFromError()
 
@@ -1231,7 +1231,7 @@ export default class ErrorBoundary extends React.Component<Props, State> {
 }
 ```
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%203.png)
+![2_Untitled 3](https://github.com/haaneul11/react-deep-dive/assets/58289675/ecdd2a3e-6818-44df-bc0e-babd95a4afcc)
 
 - componentDidCatch에서는 getDerivedStateFromError()에서 하지 못했던 부수 효과를 수행할 수 있다. 왜냐하면 render 단계에서 실행되는 getDerivedStateFromError와는 다르게 componentDidCatch는 커밋 단계에 실행되기 때문이다.
 - 즉 componentDidCatch는 리액트에서 에러 발생 시 이 메서드에서 제공되는 에러 정보를 바탕으로 로깅하는 등의 용도로 사용할 수 있다.
@@ -1751,7 +1751,7 @@ function Hello() {
 - https://projects.wojtekmaj.pl/react-lifecycle-methods-diagram/
   → 리액트 렌더 단계와 커밋 단계에서 어떤 일이 일어나는지 보여주는 다이어그램. 비록 클래스 컴포넌트만을 기준으로 작성돼 있지만 전체적인 렌더링 단계를 이해하는 데 도움이 될 것이다.
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%204.png)
+![2_Untitled 4](https://github.com/haaneul11/react-deep-dive/assets/58289675/b7352c2d-2682-42f5-b555-75526abc0699)
 
 렌더 단계와 커밋 단계로 이뤄진 리액트의 렌더링은 항상 동기식으로 작동했다. 따라서 렌더링 과정이 길어질수록 애플리케이션의 성능 저하로 이어지고, 결과적으로 그 시간만큼 브라우저의 다른 작업을 지연시킬 가능성이 있다.
 
@@ -1811,9 +1811,9 @@ function D() {
 
 사용자가 B 컴포넌트의 버튼을 눌러 counter 변수를 업데이트하면 리액트에서는 다음과 같은 순서로 렌더링이 일어난다.
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%205.png)
+![2_Untitled 5](https://github.com/haaneul11/react-deep-dive/assets/58289675/95892444-18ed-4c63-ac2d-43fe28b98363)
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%206.png)
+![2_Untitled 6](https://github.com/haaneul11/react-deep-dive/assets/58289675/d8668688-4d1b-43f4-87fb-355c9dca98b2)
 
 1. B 컴포넌트의 setState가 호출된다.
 2. B 컴포넌트의 리렌더링 작업이 렌더링 큐에 들어간다.
@@ -1837,7 +1837,7 @@ const D = memo(() => {
 });
 ```
 
-![Untitled](%E1%84%85%E1%85%B5%E1%84%8B%E1%85%A2%E1%86%A8%E1%84%90%E1%85%B3%20%E1%84%92%E1%85%A2%E1%86%A8%E1%84%89%E1%85%B5%E1%86%B7%20%E1%84%8B%E1%85%AD%E1%84%89%E1%85%A9%20%E1%84%80%E1%85%B5%E1%87%81%E1%84%80%E1%85%A6%20%E1%84%89%E1%85%A1%E1%86%AF%E1%84%91%E1%85%A7%E1%84%87%E1%85%A9%E1%84%80%E1%85%B5%20910d7af881c64831b33821dfab19ea74/Untitled%207.png)
+![2_Untitled 7](https://github.com/haaneul11/react-deep-dive/assets/58289675/ef3d491c-6a71-44e4-835b-216b90ad05e0)
 
 → 동일하게 B 컴포넌트에서 상태값이 변경됐음에도 memo로 래핑돼 있어 렌더링이 일어나지 않았음을 알 수 있다.
 
